--- a/frontend/crime-visualizer/package.json
+++ b/frontend/crime-visualizer/package.json
@@ -8,11 +8,14 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "deck.gl": "^7.2.6",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-map-gl": "^5.0.11",
     "react-scripts": "3.1.1",
+    "react-spinners": "^0.6.1",
     "react-strap": "0.0.1",
+    "react-streetview": "^1.1.1",
     "react-vis": "^1.11.7",
     "reactstrap": "^8.0.1"
   },
