--- a/frontend/crime-visualizer/package.json
+++ b/frontend/crime-visualizer/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^3.19.1",
+    "@blueprintjs/datetime": "^3.14.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.24",
     "@fortawesome/free-solid-svg-icons": "^5.11.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
@@ -10,6 +12,8 @@
     "bootstrap": "^4.3.1",
     "deck.gl": "^7.2.6",
     "react": "^16.9.0",
+    "react-date-picker": "^7.8.2",
+    "react-datetime-picker": "^2.7.1",
     "react-dom": "^16.9.0",
     "react-map-gl": "^5.0.11",
     "react-scripts": "3.1.1",
