--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,10 @@
 Click==7.0
-Flask==1.0.2
+flask==1.0.2
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 Werkzeug==0.15.5
-pandas==0.24.2
+pandas==0.25.3
 SQLAlchemy==1.3.8
 sodapy==1.5.5
 geojson==2.5.0
